--- a/templates/weather_home.html
+++ b/templates/weather_home.html
@@ -187,8 +187,7 @@ button:hover {
     </table>
 
     <footer class="py-2">
-        <div style="padding-top: 10px; " class="small text-center text-muted">Weather Update &copy; 2025 || Developed By Md. Fahim
-            Bhuiyan
+        <div style="padding-top: 10px; " class="small text-center text-muted">Weather Update &copy; 2025 || Developed By Md. Fahim Bhuiyan
         </div>
     </footer>
 </body>
